--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,485 @@ h1{
     color: tomato;
 }
 
-.img-box {
+.img__box {
     max-width: 300px;
+}
+
+*{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+}
+
+/* fonts */
+
+@font-face {
+    font-family: gisrida;
+    src: url(../assets/Fonts/gisrida.ttf);
+  }
+
+@font-face {
+    font-family: gotham-italic;
+    src: url(../assets/Fonts/GothamBookItalic.ttf);
+  }
+
+/* fonts */
+
+.body {
+    background-color: white;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: gray;
+    padding: 20px 10px;
+    border: solid 20px #252326;
+    position: sticky;
+    border-radius: 10px;
+    flex-wrap: wrap;
+}
+
+.header__logo{
+    background-color: white;
+    max-width: 15%;
+    border-radius: inherit;
+    margin-bottom: 1rem;
+}
+
+.header__logo:hover {
+    cursor: pointer;
+}
+
+.header__nav {
+    background-color: black ;
+    padding: 1rem;
+    right: 0;
+    font-family: gotham-italic;
+    border-radius: inherit;
+
+}
+
+.header__list {
+  list-style: none;
+  display: flex;
+  margin: 0px 1rem;
+  border-radius: 1px;
+}
+
+.header__item {
+    display: inline-block;
+    background-color: white;
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0px 5px;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+}
+
+
+/* .div__mariposa{
+
+} */
+
+.img__mariposa{
+    max-width: 100%;
+    grid-column-start: 2;
+}
+
+.hero {
+    height: 80vh;
+}
+
+.section__height {
+    height: 60vh;
+    max-width: 100%;
+    border-radius: 5px;
+    background-color: darkgray;
+}
+
+.main__section {
+    padding: 15px 25px 20px 55px;
+    /* border: solid 10px #252326; */
+    margin-top: 1%;
+}
+
+.main__space{
+    height: 70vh;
+}
+
+.main__article {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px 15px 50px;
+}
+
+.main__h1 {
+    color: #252326;
+    font-style: normal;
+    font-size: 6rem;
+    font-family: gisrida;
+}
+
+.main__h2 {
+    /* display: flex;
+    justify-self: left; */
+    color: #252326;
+    font-size: 2rem;
+    font-family: gotham-italic;
+    /* width: 50vh;
+    height: 5vh; */
+
+}
+
+.main__h22 {
+    color: #252326;
+    font-style: normal;
+    font-size: 2.5rem;
+    font-family: gisrida;
+}
+
+.main__button {
+    background-color: #252326;
+    width: 150px;
+    height: 40px;
+    font-family: gotham-italic;
+}
+
+.main__button-poop {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    color: white;
+    text-decoration: none;
+}
+
+.main__parragraph {
+    height: 100px;
+    font-size: 1.5rem;
+    font-family: gotham-italic;
+    
+}
+
+.main__div{
+    display: flex;
+}
+
+
+.complementomain__section {
+    display: flex;
+    align-items: center;
+    padding: 15px 25px 20px 55px;
+    border: solid 10px #252326;
+    border-radius: 1%;
+    margin-top: 1%;
+    height: 50vh;
+
+}
+
+.complementomain__div {
+    align-self: flex-start;
+
+}
+
+.div__complemento {
+    display: flex;
+    justify-content: right;
+}
+
+
+.contenedor__clientes{
+
+    /* GRID */
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 10px;
+
+    /* GRID */
+
+    padding: 15px 25px 20px 55px;
+    /* border: solid 10px #252326; */
+    border-radius: 1%;
+    margin-top: 1%;
+}
+
+
+.card{
+    border-radius: 10px;
+    min-height: 200px;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-color: #252326;
+    color: white;
+
+}
+
+.textos {
+    display: grid;
+    grid-template-rows: 3fr 1fr 2fr ;
+
+}
+
+.img__clientes{
+    max-width: 100%;
+}
+
+
+.clientes__h2{
+    color: #fff;
+    font-size: 2rem;
+    font-family: gotham-italic;
+    display: flex;
+    align-self: center;
+
+
+}
+
+.client__parragraph {
+    display: flex;
+    align-self: baseline;
+    font-family: gotham-italic;
+}
+
+.footer {
+    background-color: gray;
+    padding: 10px 20px 15px 50px;
+    border: solid 20px #252326;
+    display: flex; 
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 60px;
+}
+
+.footer__div {
+    padding: 0;
+}
+
+.footer__logo {
+    background-color: white;
+    width: 150px;
+}
+
+.footer__list {
+    display: inline;
+    list-style: none;
+}
+
+.footer__item {
+    display: flex;
+    justify-content: left;
+    align-items: top;
+}
+
+.video {
+    max-width: 100%;
+}
+
+/* PENDIENTE A ELIMINAR --------------------------- */
+
+/* .footer__div--map {
+    display: flex;
+    justify-content: right;
+    align-items: top;
+    width: 500px;
+    height: 250px;
+    margin: 1px;
+}
+ 
+.footer__map {
+    display: flex;
+    justify-content: right;
+    align-items: top;
+    margin: 0%;
+} */
+
+
+/* PENDIENTE A ELIMINAR ------------------------------- */
+
+/* 
+
+.tienda__div{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    padding: 20px 10px;
+    margin-bottom: 10%;
+    border: solid 20px #252326;
+    position: sticky;
+} */
+
+.sobre__div{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    padding: 20px 10px;
+    margin-bottom: 10%;
+    border: solid 20px #252326;
+    position: sticky;
+
+}
+
+.sobre__h2{
+    color: #252326;
+    font-size: 2rem;
+    font-family: gotham-italic;
+    width: 50vh;
+    height: 5vh;
+}
+
+.main__tienda {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 10px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.fieldset__h1 {
+    display: flex;
+    align-self: center;
+    color: #252326;
+    font-style: normal;
+    font-size: 4rem;
+    font-family: gisrida;
+
+}
+
+/* .div__fieldset {
+
+} */
+ 
+
+
+/* CLASSES SECTION TUTO */
+
+.vid__tuto{
+    max-width: 100%;
+}
+
+.tuto__h3{
+    color: #fff;
+    font-size: 2rem;
+    font-family: gotham-italic;
+    display: flex;
+    align-self: center;
+}
+
+
+.tuto_parragraph{
+    display: flex;
+    align-self: baseline;
+    font-family: gotham-italic;
+}
+
+/* FIN CLASSES SECTION TUTO */
+
+
+/* CLASSES SECTION REGALA*/
+
+.img__tienda{
+    max-width: 100%;
+}
+
+.tienda__h2{
+    color: #fff;
+    font-size: 2rem;
+    font-family: gotham-italic;
+    display: flex;
+    align-self: center;
+}
+
+.tienda__parragraph{
+    display: flex;
+    align-self: baseline;
+    font-family: gotham-italic;
+}
+
+
+
+/* FIN CLASSES SECTION REGALA*/
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1728px) {
+    .hero{
+        height: 80vh;
+    }
+    
+    .section__height {
+        height: 80vh;
+    }
+
+    
+}
+
+/* @media screen and (max-width: 1255px) {
+    .
+} */
+
+@media screen and (max-width: 425px) {
+    
+    .header, .body, .header__logo, .header__nav, .contenedor__clientes, .footer, .main__section, .main__tienda   {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .hero{
+        max-width: fit-content;
+    }
+
+    /* .header {
+        max-width: 100%;
+    } */
+    
+    .main__article{
+        height: 150vh;
+    }
+
+    .img__mariposa{
+        max-width: 50%;
+        align-items: center;
+    }
+    
+    .card {
+        margin: 10px;
+    }
+
+    .section__height {
+        height: 80vh;
+        background-color: darkgray;
+
+    }
+
+}
+
+
+@media screen and (max-width:768px) {
+    
+    .hero {
+        height: 100vh;
+    }
+
+    .section__height {
+        height: 100vh;
+        border-radius: 5px;
+        background-color: darkgray   
+    }
 }
