--- a/css/styles.css
+++ b/css/styles.css
@@ -67,36 +67,12 @@ h1{
 
 }
 
-.header__list {
-  list-style: none;
-  display: flex;
-  margin: 0px 1rem;
-  border-radius: 1px;
-}
-
-.header__item {
-    display: inline-block;
-    background-color: white;
+.text__deco{
     text-decoration: none;
-    list-style-type: none;
-    margin: 0px 5px;
 }
-
-.main {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-
-}
-
-
-/* .div__mariposa{
-
-} */
 
 .img__mariposa{
     max-width: 100%;
-    grid-column-start: 2;
 }
 
 .hero {
@@ -105,26 +81,16 @@ h1{
 
 .section__height {
     height: 60vh;
-    max-width: 100%;
     border-radius: 5px;
     background-color: darkgray;
-}
-
-.main__section {
-    padding: 15px 25px 20px 55px;
-    /* border: solid 10px #252326; */
-    margin-top: 1%;
+    margin-left: -11px;
+    margin-right: -0px;    
 }
 
 .main__space{
     height: 70vh;
 }
 
-.main__article {
-    display: flex;
-    flex-direction: column;
-    padding: 10px 20px 15px 50px;
-}
 
 .main__h1 {
     color: #252326;
@@ -158,45 +124,10 @@ h1{
     font-family: gotham-italic;
 }
 
-.main__button-poop {
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-    color: white;
-    text-decoration: none;
-}
 
 .main__parragraph {
-    height: 100px;
     font-size: 1.5rem;
-    font-family: gotham-italic;
-    
-}
-
-.main__div{
-    display: flex;
-}
-
-
-.complementomain__section {
-    display: flex;
-    align-items: center;
-    padding: 15px 25px 20px 55px;
-    border: solid 10px #252326;
-    border-radius: 1%;
-    margin-top: 1%;
-    height: 50vh;
-
-}
-
-.complementomain__div {
-    align-self: flex-start;
-
-}
-
-.div__complemento {
-    display: flex;
-    justify-content: right;
+    font-family: gotham-italic;    
 }
 
 
@@ -290,41 +221,6 @@ h1{
     max-width: 100%;
 }
 
-/* PENDIENTE A ELIMINAR --------------------------- */
-
-/* .footer__div--map {
-    display: flex;
-    justify-content: right;
-    align-items: top;
-    width: 500px;
-    height: 250px;
-    margin: 1px;
-}
- 
-.footer__map {
-    display: flex;
-    justify-content: right;
-    align-items: top;
-    margin: 0%;
-} */
-
-
-/* PENDIENTE A ELIMINAR ------------------------------- */
-
-/* 
-
-.tienda__div{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: white;
-    height: 100%;
-    width: 100%;
-    padding: 20px 10px;
-    margin-bottom: 10%;
-    border: solid 20px #252326;
-    position: sticky;
-} */
 
 .sobre__div{
     display: flex;
@@ -366,10 +262,7 @@ h1{
 
 }
 
-/* .div__fieldset {
 
-} */
- 
 
 
 /* CLASSES SECTION TUTO */
@@ -439,22 +332,11 @@ h1{
     .
 } */
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 650px) {
     
-    .header, .body, .header__logo, .header__nav, .contenedor__clientes, .footer, .main__section, .main__tienda   {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
 
-    .hero{
-        max-width: fit-content;
-    }
 
-    /* .header {
-        max-width: 100%;
-    } */
-    
+
     .main__article{
         height: 150vh;
     }
@@ -469,11 +351,23 @@ h1{
     }
 
     .section__height {
-        height: 80vh;
+        height: 100vh;
         background-color: darkgray;
 
     }
 
+    .main__h1{
+        font-size: 2.3rem;
+    }
+
+    .main__h2{
+        font-size: 1.5rem;
+    }
+
+    .main__parragraph {
+        font-size: 1.5rem;
+        font-family: gotham-italic;    
+    }    
 }
 
 
@@ -488,4 +382,24 @@ h1{
         border-radius: 5px;
         background-color: darkgray   
     }
+    .main__parragraph {
+        font-size: 1.2rem;
+        font-family: gotham-italic;    
+    }
+}
+
+
+@media screen and (max-width: 998px) {
+
+    .main__parragraph {
+        font-size: 1.1rem;
+        font-family: gotham-italic;    
+    }
+}
+
+@media screen and (max-width: 320) {
+    .map__size{
+        max-width: 50%;
+    }
+    
 }
