previo a merge con rama de sass

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
 @import "./parciales/reset";
+/*fin de reset*/
 @import "./parciales/fuentes";
+/* fin de fonts*/
 @import "./parciales/hero";
+/*fin de hero*/
 @import "./parciales/section";
 @import "./parciales/conociendo-mas";
 @import "./parciales/vars";
-@import "./parciales/footer";
-
-
-
+@import "./parciales/media-queries";
