--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,12 @@
           box-sizing: border-box;
 }
 
-/* fonts */
+a {
+  text-decoration: none;
+  color: #252326;
+}
+
+/*fin de reset*/
 @font-face {
   font-family: gisrida;
   src: url(../assets/Fonts/gisrida.ttf);
@@ -16,7 +21,7 @@
   src: url(../assets/Fonts/GothamBookItalic.ttf);
 }
 
-/* fonts */
+/* fin de fonts*/
 .hero {
   height: 80vh;
 }
@@ -30,7 +35,7 @@
 
 .main__h2 {
   color: #252326;
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-family: gotham-italic;
 }
 
@@ -38,6 +43,7 @@
   text-decoration: none;
 }
 
+/*fin de hero*/
 .section__height {
   height: 60vh;
   border-radius: 5px;
