--- a/scss/parciales/_reset.scss
+++ b/scss/parciales/_reset.scss
@@ -1,5 +1,13 @@
+@import "./vars";
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+a{
+    text-decoration: none;
+    color: $color_primario;
+
 }
