--- a/scss/parciales/_section.scss
+++ b/scss/parciales/_section.scss
@@ -13,9 +13,11 @@
 }
 
 .main__h22 {
+    margin: 3.5%;
+    text-align: center;
     color: $color_primario;
     font-style: normal;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     font-family: gisrida;
 }
 
