--- a/scss/parciales/_conociendo-mas.scss
+++ b/scss/parciales/_conociendo-mas.scss
@@ -1,10 +1,19 @@
 
 @import "./vars";
 
-.card{
+
+.card {
+    display: grid;
+    grid-template-rows: 1fr ;
+    
+
+}
+
+.textos{
+    text-align: center;
     border-radius: 10px;
-    min-height: 200px;
     padding: 20px;
+    margin: 10px;
     position: relative;
     overflow: hidden;
     background-color: $color_primario;
@@ -12,19 +21,12 @@
 
 }
 
-.textos {
-    display: grid;
-    grid-template-rows: 3fr 1fr 2fr ;
-
-}
-
-
 .clientes__h2{
+    display: flex;
+    align-self: center;
     color: $color_terciario;
     font-size: 2rem;
     font-family: gotham-italic;
-    display: flex;
-    align-self: center;
 
 
 }
@@ -34,3 +36,4 @@
     align-self: baseline;
     font-family: gotham-italic;
 }
+
