--- a/scss/parciales/_vars.scss
+++ b/scss/parciales/_vars.scss
@@ -14,10 +14,17 @@ $parrafoDesktop: 1.5rem;
 $parrafoTablet: 1.5rem;
 $parrafoMobile: 1.5rem;
 
+// tamaño imagenes
+
+$clientesWidth: 100%;
+
 //mixin para media queries
 
 $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1080px;
+
+
+
 
 
