--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,4 @@
 @import "./parciales/conociendo-mas";
 @import "./parciales/vars";
 @import "./parciales/media-queries";
+@import "./parciales/tutoriales"
