--- a/scss/parciales/_reset.scss
+++ b/scss/parciales/_reset.scss
@@ -8,6 +8,10 @@
 
 a{
     text-decoration: none;
-    color: $color_primario;
 
+    &:hover ,
+        &:active {
+            transform: scale(1.3);
+         }
 }
+
