--- a/scss/parciales/_section.scss
+++ b/scss/parciales/_section.scss
@@ -1,27 +1,29 @@
 @import "./vars";
 
-.section__height {
+.section {
     height: 60vh;
     border-radius: 5px;
     background-color: $color_secundario;
     margin-left: -11px;
     margin-right: -0px;    
+
+    &__video {
+        max-width: 100%;
+    }
+
+    &__h2 {
+        margin: 3.5%;
+        text-align: center;
+        color: $color_primario;
+        font-style: normal;
+        font-size: 3.5rem;
+        font-family: gisrida;
+    }
+
+    &__p {
+        font-size: 1.5rem;
+        font-family: gotham-italic; 
+    }
 }
 
-.video {
-    max-width: 100%;
-}
 
-.main__h22 {
-    margin: 3.5%;
-    text-align: center;
-    color: $color_primario;
-    font-style: normal;
-    font-size: 3.5rem;
-    font-family: gisrida;
-}
-
-.main__parragraph {
-    font-size: 1.5rem;
-    font-family: gotham-italic;    
-}
