--- a/scss/parciales/_tutoriales.scss
+++ b/scss/parciales/_tutoriales.scss
@@ -1,11 +1,12 @@
 @import "./vars";
+@import "./media-queries";
 
 .tutorial {
    max-width: 100%;
 
    &__h3 {
     color: $color_terciario;
-    font-size: 2rem;
+    font-size: $h3Desktop;
     font-family: gotham-italic;
     display: flex;
     align-self: center;
@@ -17,5 +18,20 @@
     font-family: gotham-italic;
    }
 
+   &__video {
+      max-width: 100%;
+   }
+
+   @include tablet {
+      &__h3 {
+         font-size: $h3Tablet;
+      }
+   }
+
+   @include mobile {
+      &__h3 {
+         font-size: $h3Mobile;
+      }
+   }
 }
 
