--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,26 @@
 
 a {
   text-decoration: none;
+  color: darkgrey;
 }
 
 a:hover, a:active {
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
+  color: white;
+}
+
+.img__box {
+  max-width: 40%;
+}
+
+/*BS modifications*/
+.btn {
+  color: black;
+}
+
+.container-fluid {
+  padding: 10px;
 }
 
 /*fin de reset*/
@@ -39,7 +54,7 @@ a:hover, a:active {
 
 .main__h2 {
   color: #252326;
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-family: gotham-italic;
 }
 
@@ -53,6 +68,24 @@ a:hover, a:active {
   display: inline-block;
   -webkit-transition: all .2s;
   transition: all .2s;
+}
+
+@media screen and (max-width: 768px) {
+  .main__h1 {
+    font-size: 4rem;
+  }
+  .main__h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .main__h1 {
+    font-size: 2rem;
+  }
+  .main__h2 {
+    font-size: 1rem;
+  }
 }
 
 /*fin de hero*/
@@ -73,13 +106,40 @@ a:hover, a:active {
   text-align: center;
   color: #252326;
   font-style: normal;
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-family: gisrida;
 }
 
 .section__p {
   font-size: 1.5rem;
   font-family: gotham-italic;
+}
+
+@media screen and (max-width: 768px) {
+  .section {
+    height: 70vh;
+  }
+  .section__h2 {
+    font-size: 1.5rem;
+  }
+  .section__p {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .section {
+    height: 60vh;
+  }
+  .section__h2 {
+    font-size: 1rem;
+  }
+  .section__p {
+    font-size: 0.8rem;
+  }
+  .section__video {
+    display: none;
+  }
 }
 
 .clientes {
@@ -91,6 +151,11 @@ a:hover, a:active {
   display: grid;
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
+}
+
+.clientes__carta:hover, .clientes__carta:active {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .clientes__textos {
@@ -124,6 +189,44 @@ a:hover, a:active {
   font-family: gotham-italic;
 }
 
+@media screen and (max-width: 768px) {
+  .clientes__h1 {
+    font-size: 4rem;
+  }
+  .clientes__p {
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .clientes__h1 {
+    font-size: 2rem;
+  }
+  .clientes__p {
+    font-size: 0.8rem;
+  }
+}
+
+.conociendo {
+  height: 90vh;
+  border-radius: 5px;
+  background-color: darkgrey;
+  margin-left: -11px;
+  margin-right: -0px;
+}
+
+@media screen and (max-width: 768px) {
+  .conociendo {
+    height: 70vh;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .conociendo {
+    height: 75vh;
+  }
+}
+
 .tutorial {
   max-width: 100%;
 }
@@ -146,4 +249,20 @@ a:hover, a:active {
   -ms-flex-item-align: baseline;
       align-self: baseline;
   font-family: gotham-italic;
+}
+
+.tutorial__video {
+  max-width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .tutorial__h3 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .tutorial__h3 {
+    font-size: 1rem;
+  }
 }
