--- a/scss/parciales/_reset.scss
+++ b/scss/parciales/_reset.scss
@@ -8,10 +8,28 @@
 
 a{
     text-decoration: none;
+    color: $color_secundario;
 
-    &:hover ,
+    &:hover,
         &:active {
             transform: scale(1.3);
+            color: $color_terciario;
          }
+        
+}
+
+.img__box {
+    max-width: 40%;
+}
+
+
+/*BS modifications*/
+
+.btn {
+    color: black;
+}
+
+.container-fluid {
+    padding: 10px;
 }
 
