--- a/scss/parciales/_section.scss
+++ b/scss/parciales/_section.scss
@@ -1,4 +1,5 @@
 @import "./vars";
+@import "./media-queries";
 
 .section {
     height: 60vh;
@@ -16,13 +17,44 @@
         text-align: center;
         color: $color_primario;
         font-style: normal;
-        font-size: 3.5rem;
+        font-size: $h2Desktop;
         font-family: gisrida;
     }
 
     &__p {
-        font-size: 1.5rem;
+        font-size: $parrafoDesktop;
         font-family: gotham-italic; 
+    }
+
+    @include tablet {
+
+        height: 70vh;
+
+        &__h2 {
+            font-size: $h2Tablet;
+        }
+
+        &__p {
+            font-size: $parrafoTablet;
+        }
+
+    }
+
+    @include mobile {
+            height: 60vh;
+
+
+        &__h2 {
+            font-size: $h2Mobile;
+        }
+
+        &__p {
+            font-size: $parrafoMobile;
+        }
+
+        &__video {
+            display: none;
+        }
     }
 }
 
