--- a/scss/parciales/_vars.scss
+++ b/scss/parciales/_vars.scss
@@ -7,12 +7,20 @@ $color_terciario: white;
 //tamaño de fuentes
 
 $h1Desktop: 6rem;
-$h1Tablet: 3rem;
-$h1Mobile: 1.5rem;
+$h1Tablet: 4rem;
+$h1Mobile: 2rem;
+
+$h2Desktop: 3rem;
+$h2Tablet: 1.5rem;
+$h2Mobile: 1rem;
+
+$h3Desktop: 2rem;
+$h3Tablet: 1.5rem;
+$h3Mobile: 1rem;
 
 $parrafoDesktop: 1.5rem;
-$parrafoTablet: 1.5rem;
-$parrafoMobile: 1.5rem;
+$parrafoTablet: 1rem;
+$parrafoMobile: 0.8rem;
 
 // tamaño imagenes
 
